--- a/home.css
+++ b/home.css
@@ -6,7 +6,7 @@ body {
 /*Landing Page*/
 
 .home-inner {
-	background-image: url(../images/background.jpg);
+	background-image: url(background.jpg);
 }
 
 .caption {
